--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,7 +33,7 @@
         <sponsor xml:id="UT22084-066-015-1619">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.12 <date>2023</date>
+                <edition>v 1.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -225,6 +225,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:12:42.617Z" type="text-version" status="1.0.12" xml:id="UT22084-066-015-1668">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#andre" when="2024-01-02T10:40:29.704Z" type="text-version" status="1.0.13" xml:id="UT22084-066-015-1669">
+                    <desc>Definition for kalandaka­nivāpa replaced with standard definition</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -8229,7 +8232,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">aṣṭādaśāveṇika</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ’dres pa bcwa brgyad</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མ་འདྲེས་པ་བཅྭ་བརྒྱད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Eighteen special features of a buddha’s behavior, realization,
                 activity, and wisdom that are not shared by other beings. They are as follows: He
                 never makes a mistake, he is never boisterous, he never forgets, his concentration
@@ -8449,7 +8452,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">apasmāra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brjed byed</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྗེད་བྱེད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A name for both seizures and the demon that causes seizures
                 and loss of consciousness. The Tibetan specifically means “causing
                 forgetting.”</p>
@@ -9007,7 +9010,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">samādhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ting nge ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A synonym for meditation, this refers to the state of deep
                 meditative immersion that results from different modes of Buddhist practice.</p>
                             </note>
@@ -9190,7 +9193,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sugata</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bde bar gshegs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བདེ་བར་གཤེགས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An epithet for a buddha.</p>
                             </note>
                         </gloss>
@@ -10853,7 +10856,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Name of the clan into which the Buddha Śākyamuni was
                 born.</p>
                             </note>
@@ -10946,16 +10949,13 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="place" xml:id="UT22084-066-015-1460">
+                        <gloss xml:id="UT22084-066-015-1460" type="place" mode="match">
                             <term type="translationMain">Vārāṇasī</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vārāṇasī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bA ra NA si</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">བཱ་ར་ཎཱ་སི།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">kāśī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2">yul ka shi</term>
                             <term xml:lang="bo" type="attestedSource" n="2">ཡུལ་ཀ་ཤི།</term>
                             <note type="definition">
-                                <p>City in North India where the Buddha Śākyamuni first taught
-                the Dharma.</p>
+                                <p>City in North India where the Buddha Śākyamuni first taught the Dharma.</p>
                             </note>
                         </gloss>
                     </item>
@@ -10989,7 +10989,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">magadha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ga d+hA</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མ་ག་དྷཱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The largest kingdom of North India during the time of the
                 Buddha Śākyamuni.</p>
                             </note>
@@ -11174,7 +11174,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the southern continent in Buddhist cosmology,
                 which can mean the known world of humans or more specifically the Indian
                 subcontinent. A gigantic, miraculous rose-apple (<foreign xml:lang="Sa-Ltn" type="term">jambu</foreign>) tree at the source of the great Indian rivers is said
@@ -11224,7 +11224,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣita</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The fourth level of the heavens of the realm of desire, it is
                 the last stopping place of a buddha-to-be before his descent and reincarnation on
                 earth; at present it is the abode of the future Buddha Maitreya.</p>
@@ -11751,7 +11751,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kalandakanivāpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ka lan da ka gnas</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཀ་ལན་ད་ཀ་གནས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Literally, the “Squirrel Feeding Ground.” A location within
                 the Veṇuvana where the Buddha Śākyamuni stayed. The place received its name from the
                 many squirrels living there, being fed by humans. It should be noted that Tibetan
