--- a/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
+++ b/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
@@ -35,7 +35,7 @@
         <sponsor xml:id="UT22084-056-006-2087">Twenty and family</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.28 <date>2023</date>
+                <edition>v 1.0.29 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -214,6 +214,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T20:58:13.312Z" type="text-version" status="1.0.28" xml:id="UT22084-056-006-2134">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#andre" when="2024-01-02T10:44:14.279Z" type="text-version" status="1.0.29" xml:id="UT22084-056-006-2136">
+                    <desc>Definition for kalandaka­nivāpa replaced with standard definition</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -8451,7 +8454,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">samādhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ting nge ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Stabilized meditative <term rend="ignore">concentration</term>.</p>
                             </note>
                         </gloss>
@@ -8763,20 +8766,17 @@
                         </gloss>
           </item>
           <item>
-            <gloss type="term" xml:id="UT22084-056-006-1565">
-                            <term type="translationMain">Dharma</term>
-                            <term type="translationAlternative">phenomenon</term>
+                        <gloss xml:id="UT22084-056-006-1565" type="term" mode="match">
+                            <term type="translationMain">phenomenon</term>
                             <term type="translationAlternative">phenomena</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dharma</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">chos</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཆོས།</term>
                             <note type="definition">
-                                <p>Quality or <term rend="ignore">phenomenon</term> in a general
-                sense; when spelled with a capital letter it refers to the Buddha’s teaching, one of
-                the Three Jewels.</p>
+                                <p>Quality or <term rend="ignore">phenomenon</term> in a general sense. See entry “Dharma.”</p>
                             </note>
                         </gloss>
-          </item>
+                    </item>
           <item>
             <gloss type="term" xml:id="UT22084-056-006-1566">
                             <term type="translationMain">Dharma discourse</term>
@@ -8811,7 +8811,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">aṣṭā­daśā­veṇika­buddha­dharma</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sangs rgyas kyi chos ma ’dres pa bco brgyad</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སངས་རྒྱས་ཀྱི་ཆོས་མ་འདྲེས་པ་བཅོ་བརྒྱད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Eighteen special features of a buddha’s behavior, realization,
                 activity, and wisdom that are not shared by other beings.</p>
                             </note>
@@ -9123,7 +9123,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">karman</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">las</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ལས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Activity, action, or <term rend="ignore">karma</term> (karmic
                 accumulation).</p>
                             </note>
@@ -9160,7 +9160,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kṣatriya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal rigs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་རིགས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The <term rend="ignore">warrior caste</term> (one of the main
                 four Indian castes).</p>
                             </note>
@@ -9229,7 +9229,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">bodhicitta</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byang chub kyi sems</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱང་ཆུབ་ཀྱི་སེམས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The aspiration to attain awakening for the sake of all
                 beings.</p>
                             </note>
@@ -9553,7 +9553,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pratyekabuddha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rang sangs rgyas</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རང་སངས་རྒྱས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A being who attains nirvāṇa without the help of a
                 buddha.</p>
                             </note>
@@ -11196,7 +11196,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the clan into which the Buddha was born.</p>
                             </note>
                         </gloss>
@@ -11951,7 +11951,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jambudvīpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The southern continent, one of the four comprising our world
                 in Buddhist cosmology.</p>
                             </note>
@@ -11963,7 +11963,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">kalandaka­nivāpa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bya ka lan ta ka</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱ་ཀ་ལན་ཏ་ཀ</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Literally, “The Squirrel Feeding Ground,” a location within
                 the Veṇuvana where the Buddha stayed, receiving its name from the many squirrels
                 living there, being fed by humans. It should be noted that Tibetan translations
@@ -11992,7 +11992,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">magadha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ga d+hA</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མ་ག་དྷཱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The country corresponding roughly to modern Bihar.</p>
                             </note>
                         </gloss>
@@ -12097,7 +12097,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sahā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mi mjed</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མི་མཇེད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The great trichiliocosm in which we live.</p>
                             </note>
                         </gloss>
@@ -12133,7 +12133,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣita</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the gods’ realms.</p>
                             </note>
                         </gloss>
@@ -12220,7 +12220,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">sugata</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bde bar gshegs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བདེ་བར་གཤེགས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An epithet for a buddha.</p>
                             </note>
                         </gloss>
@@ -12264,7 +12264,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>“The sage of the Śākya clan,” an epithet of the Buddha.</p>
                             </note>
                         </gloss>
@@ -12314,6 +12314,14 @@
                             </note>
                         </gloss>
           </item>
+            <item>
+                        <gloss xml:id="UT22084-056-006-2135" type="term" mode="match">
+                            <term type="translationMain">Dharma</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">dharma</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས།</term>
+                        </gloss>
+                    </item>
         </list>
       </div>
     </back>
