--- a/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -27,7 +27,7 @@
         <editor role="TEImarkupEditor" xml:id="UT22084-043-010-48">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.1.19 <date>2023</date>
+                <edition>v 0.1.20 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -35,7 +35,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2.a">
+        <availability status="2">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -157,6 +157,12 @@
                 </change>
                 <change who="#john" when="2023-12-02T11:49:24.22Z" type="text-version" status="0.1.19" xml:id="UT22084-043-010-386">
                     <desc>Corrections to bibliography.</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-03T10:59:10.116Z" type="translation-status" status="2" xml:id="UT22084-043-010-387">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-03T10:59:10.116Z" type="text-version" status="0.1.20" xml:id="UT22084-043-010-388">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
