--- a/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
+++ b/translations/tengyur/placeholders/003-001_toh1183-yogaratnamalanamahevajrapanjika.xml
@@ -8,16 +8,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Yoga­ratna­mālā­nāma­hevajra­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">དགྱེས་པ་རྡོ་རྗེའི་དཀའ་འགྲེལ་རྣལ་འབྱོར་རིན་པོ་ཆེའི་ཕྲེང་བ་ཞེས་བྱ་བ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">dgyes pa rdo rje'i dka' 'grel rnal 'byor rin po che'i phreng ba zhes bya ba/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-76">Wiesiek Mical</author>
-                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
-                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <author role="translatorMain" xml:id="UT23703-003-001-1"/>
+                <author role="translatorEng" xml:id="UT23703-003-001-2">Wiesiek Mical</author>
+                <editor role="projectEditor" xml:id="UT23703-003-001-3">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT23703-003-001-4">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT23703-003-001"/>
                 <date/>
             </publicationStmt>
@@ -25,9 +26,9 @@
                 <bibl key="toh1183" type="text">
                     <ref>Toh 1183</ref>
                     <biblScope>ff. 1v-61r</biblScope>
-                    <author ref="eft:entity-17544" xml:lang="Sa-Ltn">Kāṇhapa</author>
-                    <author role="translatorTib" ref="eft:entity-17473" xml:lang="Sa-Ltn">Kṛṣṇa Paṇḍita</author>
-                    <author role="translatorTib" ref="eft:entity-17474" xml:lang="Bo-Ltn">lo tsa ba dge slong tshul khrims rgyal ba</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-003-001-5">Kāṇhapa</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-003-001-6">Kṛṣṇa Paṇḍita</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-003-001-7">lo tsa ba dge slong tshul khrims rgyal ba</author>
                     <location work="UT23703" count-pages="120">
                         <volume number="3" start-page="2" end-page="121"/>
                     </location>
@@ -37,24 +38,64 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-30T11:02:47.656Z" user="admin">30/11/2022 11:02:47</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:54:52.67Z" user="andreas">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:54:52.67Z" user="andreas">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-17T10:42:02.182Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-17T10:42:24.976Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
-                <note type="updated" update="attribution" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin">Author attribution taken from Derge Dkar-chag.</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-03-21T08:03:27.85Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-21T08:03:27.85Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-14T08:23:07.15Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-14T08:23:54.742Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="title" date-time="2022-11-04T13:50:24.047Z" user="john">An alternative Tibetan translation by Gö Khukpa Lhätse ('gos khug pa lhas btsas) is to be found in the Narthang and Kanxi Kangyurs.</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-11-04T13:50:24.047Z" user="john">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2022-11-30T11:02:42.13Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2022-11-30T11:02:42.13Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
+            <revisionDesc>
+                <change who="#andreas" when="2020-02-21T09:54:52.67Z" type="text-version" status="0.0.1" xml:id="UT23703-003-001-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#andreas" when="2020-02-21T09:54:52.67Z" type="translation-status" status="3" xml:id="UT23703-003-001-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-17T10:42:02.182Z" type="translation-status" status="2.h" xml:id="UT23703-003-001-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-17T10:42:02.182Z" type="text-version" status="0.0.2" xml:id="UT23703-003-001-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-17T10:42:24.976Z" type="text-version" status="0.0.3" xml:id="UT23703-003-001-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="import" xml:id="UT23703-003-001-13" source="tengyur-data-1180-1304_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="attribution" xml:id="UT23703-003-001-14" source="tengyur-data-1180-1304_PH_new_v2.4.xml">
+                    <desc>Author attribution taken from Derge Dkar-chag.</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-21T08:03:27.85Z" type="translation-status" status="2.g" xml:id="UT23703-003-001-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-21T08:03:27.85Z" type="text-version" status="0.0.4" xml:id="UT23703-003-001-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T08:23:07.15Z" type="translation-status" status="2.e" xml:id="UT23703-003-001-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T08:23:07.15Z" type="text-version" status="0.0.5" xml:id="UT23703-003-001-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-14T08:23:54.742Z" type="text-version" status="0.0.6" xml:id="UT23703-003-001-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2022-11-04T13:50:24.047Z" type="text-version" status="0.0.7" xml:id="UT23703-003-001-20">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T11:02:42.13Z" type="translation-status" status="2.d" xml:id="UT23703-003-001-21">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T11:02:42.13Z" type="text-version" status="0.0.8" xml:id="UT23703-003-001-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT23703-003-001-23">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-08T08:28:25.052Z" type="translation-status" status="2.c" xml:id="UT23703-003-001-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-08T08:28:25.052Z" type="text-version" status="0.0.10" xml:id="UT23703-003-001-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
