--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-122-96">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -31,7 +31,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -135,6 +135,12 @@
                 </change>
                 <change who="#andre" when="2023-12-18T20:36:23.274Z" type="text-version" status="1.0.3" xml:id="UT22084-101-122-102">
                     <desc>Glossary matching revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-01-08T11:00:25.811Z" type="translation-status" status="1" xml:id="UT22084-101-122-103">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-01-08T11:00:25.811Z" type="text-version" status="1.0.4" xml:id="UT22084-101-122-104">
+                    <desc>Included in App v 3.10</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
