--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -14,13 +14,14 @@
                 <author role="translatorEng" xml:id="UT22084-066-012-3">Bhikṣuṇī Thubten Damcho</author>
                 <editor role="reviser" xml:id="UT22084-066-012-4">Norbu Samphel</editor>
                 <editor role="projectEditor" xml:id="UT22084-066-012-22">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-066-012-33">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-066-012"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +90,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-03T13:20:13.746Z" type="text-version" status="0.0.13" xml:id="UT22084-066-012-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-03T13:21:01.265Z" type="text-version" status="0.0.14" xml:id="UT22084-066-012-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T15:39:59.853Z" type="translation-status" status="2.d" xml:id="UT22084-066-012-35">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T15:39:59.853Z" type="text-version" status="0.0.15" xml:id="UT22084-066-012-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
