--- a/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
+++ b/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Deliberation on the Dharma</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dharmasaṃgītisūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Dharmasaṃgītisūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos yang dag par sdud pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmasaṅgīti­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryadharmasaṅgīti­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos yang dag par sdud pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《法集經》 （大正藏：佛說法集經）</title>
                 <author role="translatorMain" xml:id="UT22084-065-001-1">Tibetan Classics Translators Guild of New York</author>
@@ -20,12 +20,12 @@
                 <sponsor xml:id="UT22084-065-001-7">Lily Xu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-065-001"/>
                 <date/>
             </publicationStmt>
@@ -98,6 +98,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-02T08:16:40.525Z" type="text-version" status="0.0.13" xml:id="UT22084-065-001-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T15:58:41.41Z" type="translation-status" status="2.c" xml:id="UT22084-065-001-37">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T15:58:41.41Z" type="text-version" status="0.0.14" xml:id="UT22084-065-001-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
