--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -15,14 +15,15 @@
                 <author role="translatorEng" xml:id="UT22084-072-021-5">Ani Kunga Chodron</author>
                 <author role="translatorEng" xml:id="UT22084-072-021-6">George FitzHerbert</author>
                 <editor role="projectEditor" xml:id="UT22084-072-021-25">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-072-021-36">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-11T08:40:03.549Z" type="text-version" status="0.0.10" xml:id="UT22084-072-021-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T08:40:46.451Z" type="text-version" status="0.0.11" xml:id="UT22084-072-021-37">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T16:06:44.52Z" type="translation-status" status="2.d" xml:id="UT22084-072-021-38">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-10T16:06:44.52Z" type="text-version" status="0.0.12" xml:id="UT22084-072-021-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
